force-app/main/default/objects/Award__c/Award__c.object-meta.xml
<CustomObject>
    <description>Awards, doctorate or fellowship honoured or won by an individual</description>
    <label>Award</label>
    <nameField>
        <label>Award Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Awards</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>