force-app/main/default/objects/Award__c/fields/I_RS_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Award_Date__c</fullName>
    <description>The date on the award letter. The PhD award date required for some NHMRC grant applications.</description>
    <label>Award Date</label>
    <type>Date</type>
</CustomField>