force-app/main/default/objects/Award__c/fields/I_RS_Conferral_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Conferral_Date__c</fullName>
    <description>The date on the testamur. The PhD conferral date is required for some ARC grant applications.</description>
    <label>Conferral Date</label>
    <type>Date</type>
</CustomField>