force-app/main/default/objects/Award__c/fields/I_RS_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The individual this award is for</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Awards</relationshipLabel>
    <relationshipName>Awards</relationshipName>
    <type>Lookup</type>
</CustomField>