force-app/main/default/objects/Award__c/fields/I_RS_Course_Appraisal__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Course_Appraisal__c</fullName>
    <description>This field will hold the information about the details of the PhD</description>
    <label>Course Appraisal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>