force-app/main/default/objects/Award__c/fields/I_RS_Issuer__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Issuer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account/Organisation that issued the award</description>
    <label>Issuer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Awards</relationshipLabel>
    <relationshipName>Awards</relationshipName>
    <type>Lookup</type>
</CustomField>