force-app/main/default/objects/Award__c/fields/I_RS_Type_of_Award__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Type_of_Award__c</fullName>
    <label>Type of Award</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aca - Doctorate</fullName>
            </value>
            <value>
                <fullName>Aca - Master&apos;s</fullName>
                <isActive>false</isActive>
                <label>Aca - Master&apos;s</label>
            </value>
            <value>
                <fullName>Non-Academic Classification</fullName>
                <isActive>false</isActive>
                <label>Non-Academic Classification</label>
            </value>
            <value>
                <fullName>PHD</fullName>
                <isActive>false</isActive>
                <label>PHD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>