force-app/main/default/objects/Award__c/listViews/All_Awards.listView-meta.xml
<ListView>
    <fullName>All_Awards</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Contact__c</columns>
    <columns>I_RS_Type_of_Award__c</columns>
    <columns>I_RS_Award_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Awards</label>
</ListView>